Fixing interior header spacing

--- a/css/_base/base.scss
+++ b/css/_base/base.scss
@@ -16,8 +16,8 @@ html, body {
 	}
 }
 .header--interior {
-	padding-left: 0.5em;
-	padding-right: 0.5em;
+	padding-left: 1em;
+	padding-right: 1em;
 	@media screen and (min-width: 50em){
 		padding-left: 2.5em;
 		padding-right: 2.5em;
