--- a/css/_components/nav.scss
+++ b/css/_components/nav.scss
@@ -9,7 +9,7 @@
 		margin: 0;
 	}
 	a {
-		padding: 2.75em 0.5em;
+		padding: 3em 0.5em;
 		font: 400 0.75em/1 $type-tertiary;
 		@media screen and (min-width:50em) {
 			padding: 4.75em 1em;
